KLAS-574: Fix layout bug

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -15,3 +15,7 @@ label {
 .tab-content, .react-tab-panel__body {
 	overflow: inherit !important;
 }
+
+#page {
+    overflow: visible !important;
+}
